# py-mock-docker-registry

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
mock_docker_registry/auth/: generate.py  validate.py
mock_docker_registry/config/: auth.py
mock_docker_registry/models/: auth.py  catalog.py  error.py  model.py
mock_docker_registry/models/repository/: ManifestV2Schema2.py  __init__.py
mock_docker_registry/utils/: error_utils.py
